# native

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  basic-type-operation.cpp  bitmap-operation.cpp  exception-operation.cpp  filed-and-animal-operation.cpp  invoke-constructor-operation.cpp  local-and-global-reference.cpp  native-lib.cpp  product-and-consumer.cpp  string-type-operation.cpp  thread_operation.cpp  thread_operation.h
app/src/main/cpp/base/: jvm.cpp  jvm.h
app/src/main/cpp/memory/: memory.cpp
app/src/main/cpp/people/: People.cpp  People.h
app/src/main/java/com/yangdainsheng/anative/: BitMapActivity.kt  JNIBasicType.kt  MainActivity.kt
app/src/main/java/com/yangdainsheng/bean/: Animal.kt  Cat.kt  ICallBack.kt
app/src/main/java/com/yangdainsheng/operations/: BitmapOp.kt  ExceptionOP.kt  FiledAndMethodOp.kt  InvokeConstructorOp.kt  JNIBasicType.kt  LocalAndGlobalReferenceOp.kt  StringType.kt  ThreadOp.kt
app/src/main/java/com/yangdainsheng/utils/: LogUtil.kt
app/src/main/res/layout/: activity_bitmap.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
